Sex Filed in Interview page, and fixed endloop wrap,Users screen

--- a/survey/static/toassets/preset.css
+++ b/survey/static/toassets/preset.css
@@ -2,7 +2,7 @@
 this is for uSurvey
 /* Normalization */
 body, html{
-   font-family: 'Open Sans', sans-serif;
+   /*font-family: 'Open Sans', sans-serif;*/
     font-weight: 400;
     line-height: 1;
     font-size: 13px;
@@ -28,7 +28,7 @@ body.single-post{
 }*/
 h1, h2, h3, h4, h5, h6 {
     color: #0b488d;
-    font-family: trebuchet ms,Open Sans;
+    /*font-family: trebuchet ms,Open Sans;*/
     font-weight: bolder;
     margin: 0;
     padding: 0;
